@@ -1,0 +1,42 @@
+/*
+   Copyright (c) 2012 LinkedIn Corp.
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+
+package com.linkedin.restli.tools.snapshot.circular;
+
+
+import com.linkedin.restli.server.annotations.Action;
+import com.linkedin.restli.server.annotations.ActionParam;
+import com.linkedin.restli.server.annotations.RestLiActions;
+import com.linkedin.restli.tools.snapshot.circular.CircularTestDataModels.*;
+
+
+/**
+ * @author Moira Tagle
+ * @version $Revision: $
+ */
+
+@RestLiActions(name="circular")
+public class CircularResource
+{
+  @Action(name="test")
+  public void test(@ActionParam("a") A a,
+                   @ActionParam("b") B b,
+                   @ActionParam("c") C c,
+                   @ActionParam("d") D d)
+  {
+  }
+
+}
